--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.6.1",
-    "micro": "^9.3.3",
-    "puppeteer": "^1.12.2"
+    "async": "3.1.0",
+    "micro": "9.3.4",
+    "puppeteer": "1.19.0"
   }
 }
