--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "Tago LLC",
   "license": "Copyright",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "async": "3.2.0",
     "micro": "9.3.4",
